// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiSideNavItem is rendered 1`] = `
<button
  aria-label="aria-label"
  class="testClass1 testClass2 kuiSideNavItem"
  data-test-subj="test subject string"
/>
`;

exports[`KuiSideNavItem isSelected defaults to false 1`] = `
<button
  class="kuiSideNavItem"
/>
`;

exports[`KuiSideNavItem isSelected is rendered when specified as true 1`] = `
<button
  class="kuiSideNavItem kuiSideNavItem-isSelected"
/>
`;

exports[`KuiSideNavItem preserves child's classes 1`] = `
<button
  class="test kuiSideNavItem"
/>
`;
